--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Looping Squares</title>
+    <title>Looping Squares Demo</title>
     <link rel="stylesheet" href="base.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
